# crabdrop

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  auto-update-plan.md  bump.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: aur.yml  build.yml  flathub.yml  release.yml
packaging/: io.github.alsofelix.crabdrop.desktop  io.github.alsofelix.crabdrop.metainfo.xml  io.github.alsofelix.crabdrop.metainfo.xml-e
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/metadata/: mod.rs
src-tauri/src/s3/: mod.rs
src-tauri/src/types/: mod.rs
